subprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(26)
        }
    }

    repositories {
        mavenCentral()
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs += ['--enable-preview']
        options.release = 26
    }

    tasks.withType(JavaExec).configureEach {
        jvmArgs '--enable-preview'
    }
}
